--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/ph_logo.png" />
+    <link rel="icon" type="image/svg+xml" href="public/clogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><Coding/> Hero</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
